Updating the project requirements files.

--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,5 +1,7 @@
-coverage==3.7.1
-selenium==3.8.0
-Sphinx==1.5.1
-sphinx-rtd-theme==0.2.5b2
-recommonmark==0.4.0
+requests==2.18.4           # Outbound network requests
+coverage==4.5.1            # Test coverage analysis/reporting
+selenium==3.9.0            # Selenium test framework
+
+Sphinx==1.5.1              # Sphinx documentation generator
+sphinx-rtd-theme==0.2.5b2  # Documentation site theme
+recommonmark==0.4.0        # Markdown to HTML processing for Sphinx
