--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,28 @@
-redis==2.10.6
+redis==2.10.6                # Redis object store library
+waitress==1.1.0              # Waitress web server
 
-celery==4.1.0
-celery-once==1.2.0
+django==2.0.2                # Django web framework
+psycopg2-binary==2.7.4       # PostgreSQL database library
+dj-database-url==0.5.0       # Django database connection configuration
+django-redis-sessions==0.6.1 # Django shared session support
+django-db-mutex==1.0.0       # Django mutex locking
+django-filter==2.0.0.dev1    # Django query filtering
+django-crispy-forms==1.7.0   # Django advanced forms
+whitenoise==4.0b4            # Static file handling
 
-django==2.0.2
-django-hstore==1.4.2
-django-storages==1.6.5
-django-redis-sessions==0.6.1
-django-celery-beat==1.1.1
-django-celery-results==1.0.1
-django-db-mutex==1.0.0
-djangorestframework==3.7.7
-django-filter==2.0.0.dev1
-django-crispy-forms==1.7.0
-coreapi==2.3.3
-coreschema==0.0.4
-dj-database-url==0.4.2
-waitress==1.1.0
+djangorestframework==3.7.7   # Django REST framework
+coreapi==2.3.3               # API schema generation (CoreAPI schema format)
+coreschema==0.0.4            # API schema generation
 
-PyYAML==3.11
-boto==2.34.0
-coverage==3.7.1
-psycopg2==2.7.4
-pytz==2014.4
-requests==2.18.4
-titlecase==0.7.1
-xmltodict==0.9.0
-markdown==2.5.2
-whitenoise==1.0.6
-psutil==5.4.2
+celery==4.1.0                # Celery task manager
+django-celery-beat==1.1.1    # Celery task scheduler
+django-celery-results==1.0.1 # Celery task result storage
+
+pytz==2018.3                 # Timezones
+titlecase==0.12.0            # String processing
+PyYAML==3.12                 # YAML parsing/generation
+markdown==2.6.11             # Markdown parsing/generation
+
+psutil==5.4.3                # System utilities
 
 -e git+https://github.com/PSHCDevOps/pyfpds.git@integration#egg=pyfpds
