--- a/requirements.txt
+++ b/requirements.txt
@@ -7,12 +7,11 @@ dj-database-url==0.5.0              # Django database connection configuration
 django-redis-sessions==0.6.1        # Django shared session support
 django-storages==1.6.5              # Django storage backend support
 django-db-mutex==1.0.0              # Django mutex locking
-django-filter==1.1.0                # Django query filtering
+django-filter==2.0.0.dev1           # Django query filtering
 django-crispy-forms==1.7.0          # Django advanced forms
 whitenoise==4.0b4                   # Static file handling
 
 djangorestframework==3.7.7          # Django REST framework
-djangorestframework-filters==0.10.2 # Django REST extended filters
 coreapi==2.3.3                      # API schema generation (CoreAPI schema format)
 coreschema==0.0.4                   # API schema generation
 
@@ -27,4 +26,5 @@ markdown==2.6.11                    # Markdown parsing/generation
 
 psutil==5.4.3                       # System utilities
 
+-e git+https://github.com/philipn/django-rest-framework-filters.git@master#egg=djangorestframework-filters
 -e git+https://github.com/PSHCDevOps/pyfpds.git@integration#egg=pyfpds
