--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -83,9 +83,9 @@ jobs:
             scripts/setup-python.sh /dev/stderr
 
       - run:
-          name: Install PhantomJS web driver
+          name: Install Chrome web driver
           command: |
-            scripts/setup-phantomjs.sh /dev/stderr
+            scripts/setup-chrome.sh /dev/stderr
 
       - run:
           name: Set CircleCI configuration
