Cleaning up the .gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,24 @@
+*.DS_Store
 *.swp
 *.swn
-local_settings.py
-__pycache__
 *.pyc
-*.DS_Store
-**.log
-db/*.sql
-logs/*.log
-logs/*.csv
-.vagrant/
-vagrant/config.yml
-src/
-app/static/
-.coverage
-.project
-.pydevproject
-.settings/
-docker/django-env.vars
-celerybeat.pid
-docs/build
-opencontrols/
-_book
+__pycache__
+
+/.project
+/.pydevproject
+/.settings/
+/_book/
+/.coverage
+/.vagrant/
 /tmp/
 _*/
+
+/app/discovery/local_settings.py
+/app/static/
+/db/*.sql
+/docker/django-env.vars
+/docs/build
+/logs/*.log
+/logs/*.csv
+/logs/celerybeat.pid
+/vagrant/config.yml
