Cleaning up the .cfignore.

--- a/.cfignore
+++ b/.cfignore
@@ -1,27 +1,30 @@
+*.DS_Store
 *.swp
 *.swn
 *.pyc
-*.DS_Store
-**.log
-db/*.sql
-logs/*.log
-logs/*.csv
-Vagrantfile
-.vagrant/
-vagrant/
-vagrant-config.*.yml
-vagrant-config.yml
-src/
-/static/
-.coverage
-.project
-.pydevproject
-.settings/
-docker/
-docker-compose.yml
-celerybeat.pid
+__pycache__
+
+/.project
+/.pydevproject
+/.settings/
+/_book/
+/.coverage
+/.vagrant/
+/tmp/
+
+/app/discovery/local_settings.py
+/app/static/
+/cf/
+/db/
+/docker/
 /docs/
-compliance/
-opencontrols/
-opencontrol.yml
-_book/
+/logs/*.log
+/logs/*.csv
+/logs/celerybeat.pid
+/vagrant/
+
+/docker-compose-ha.yml
+/docker-compose.yml
+/LICENSE.md
+/README.md
+/Vagrantfile
