--- a/requirements.txt
+++ b/requirements.txt
@@ -27,5 +27,7 @@ markdown==2.6.11                    # Markdown parsing/generation
 psutil==5.4.3                       # System utilities
 tblib==1.3.2                        # Traceback serialization (for parallel exceptions)
 
+cg-django-uaa==1.3.0                # Cloud.gov Django UAA adaptor
+
 -e git+https://github.com/philipn/django-rest-framework-filters.git@master#egg=djangorestframework-filters
 -e git+https://github.com/PSHCDevOps/pyfpds.git@integration#egg=pyfpds
