--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,8 @@ django-storages==1.6.5              # Django storage backend support
 django-db-mutex==1.0.0              # Django mutex locking
 django-filter==2.0.0.dev1           # Django query filtering
 django-crispy-forms==1.7.0          # Django advanced forms
-django_csp==3.4                     # Django browser CSP policy support
+django-csp==3.4                     # Django browser CSP policy support
+django-referrer-policy==1.0         # Django referrer policy header support
 whitenoise==4.0b4                   # Static file handling
 
 djangorestframework==3.7.7          # Django REST framework
