Adding django cors headers package to the project requirements.

--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ django-filter==2.0.0.dev1           # Django query filtering
 django-crispy-forms==1.7.0          # Django advanced forms
 django-csp==3.4                     # Django browser CSP policy support
 django-referrer-policy==1.0         # Django referrer policy header support
+django-cors-headers==2.2.0          # Django CORs header support
 whitenoise==4.0b4                   # Static file handling
 
 djangorestframework==3.7.7          # Django REST framework
