--- a/requirements.txt
+++ b/requirements.txt
@@ -23,10 +23,12 @@ django-celery-beat==1.1.1           # Celery task scheduler
 django-celery-results==1.0.1        # Celery task result storage
 kombu==4.2.0                        # Python messaging library
 
+pandas==0.23.0                      # Data structures for tabular data
 pytz==2018.3                        # Timezones
 titlecase==0.12.0                   # String processing
 PyYAML==3.12                        # YAML parsing/generation
 markdown==2.6.11                    # Markdown parsing/generation
+openpyxl==2.5.3                     # Parsing of XLS* documents
 
 psutil==5.4.3                       # System utilities
 tblib==1.3.2                        # Traceback serialization (for parallel exceptions)
