--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -184,7 +184,7 @@ jobs:
           name: Install development tools
           command: |
             apt-get update
-            apt-get install -y git gcc
+            apt-get install -y git gcc make
 
       - checkout
 
