--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ dj-database-url==0.5.0              # Django database connection configuration
 django-redis-sessions==0.6.1        # Django shared session support
 django-storages==1.6.5              # Django storage backend support
 django-db-mutex==1.0.0              # Django mutex locking
-django-filter==2.0.0.dev1           # Django query filtering
+django-filter==2.0.0                # Django query filtering
 django-crispy-forms==1.7.0          # Django advanced forms
 django-csp==3.4                     # Django browser CSP policy support
 django-referrer-policy==1.0         # Django referrer policy header support
@@ -35,5 +35,6 @@ tblib==1.3.2                        # Traceback serialization (for parallel exce
 
 cg-django-uaa==1.3.0                # Cloud.gov Django UAA adaptor
 
--e git+https://github.com/PSHCDevOps/django-rest-framework-filters.git@master#egg=djangorestframework-filters
+-e git+https://github.com/PSHCDevOps/django-rest-framework-filters.git@ebda20733a88caf4202262de3f3bfe97a0d6d874#egg=djangorestframework-filters
 -e git+https://github.com/PSHCDevOps/pyfpds.git@integration#egg=pyfpds
+
