--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ django-redis-sessions==0.6.1        # Django shared session support
 django-storages==1.6.5              # Django storage backend support
 django-db-mutex==1.0.0              # Django mutex locking
 django-filter==2.0.0                # Django query filtering
+django-libsass==0.7                 # SASS integration and compilation
 django-crispy-forms==1.7.0          # Django advanced forms
 django-csp==3.4                     # Django browser CSP policy support
 django-referrer-policy==1.0         # Django referrer policy header support
