--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,8 @@ djangorestframework==3.7.7          # Django REST framework
 coreapi==2.3.3                      # API schema generation (CoreAPI schema format)
 coreschema==0.0.4                   # API schema generation
 
+django-webpack-loader==0.6.0        # Library for working with Angular webpacks
+
 celery==4.1.1                       # Celery task manager
 django-celery-beat==1.1.1           # Celery task scheduler
 django-celery-results==1.0.1        # Celery task result storage
