Adding Angular CLI setup in the Discovery Dockerfile.

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -14,10 +14,20 @@ VOLUME /discovery
 WORKDIR /discovery
 
 #
-# Application requirements
+# Application base dependencies
 #
 RUN apt-get update -y && apt-get install -y git gcc
 
+#
+# Angular environment
+#
+COPY ./scripts/setup-angular.sh /usr/local/bin/setup-angular
+
+RUN setup-angular /dev/stdout
+
+#
+# Python environment
+#
 COPY ./requirements.txt /tmp/requirements.txt
 COPY ./requirements-dev.txt /tmp/requirements-dev.txt
 
