--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,7 @@ _*/
 .~lock.*
 
 /app/discovery/local_settings.py
-/app/frontend/dist
+/app/discovery/static/discovery_site/frontend/
 /app/static/
 /db/*.sql
 /docker/django-env.vars
