--- a/app/frontend/angular.json
+++ b/app/frontend/angular.json
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/discovery",
+            "outputPath": "../discovery/static/discovery_site/frontend",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
