--- a/app/frontend/angular.json
+++ b/app/frontend/angular.json
@@ -19,8 +19,7 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "src/tsconfig.app.json",
             "assets": ["src/favicon.ico", "src/assets"],
-            "styles": ["src/styles.css"],
-            "scripts": ["node_modules/jquery/dist/jquery.min.js"]
+            "styles": ["src/styles.css"]
           },
           "configurations": {
             "production": {
@@ -67,7 +66,6 @@
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "styles": ["src/styles.css"],
-            "scripts": ["node_modules/jquery/dist/jquery.min.js"],
             "assets": ["src/favicon.ico", "src/assets"]
           }
         },
