--- a/app/frontend/angular.json
+++ b/app/frontend/angular.json
@@ -19,6 +19,7 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "src/tsconfig.app.json",
             "assets": ["src/favicon.ico", "src/assets"],
+            "scripts": ["./node_modules/jquery/dist/jquery.min.js"],
             "styles": ["src/styles.css"]
           },
           "configurations": {
@@ -66,6 +67,7 @@
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "styles": ["src/styles.css"],
+            "scripts": ["./node_modules/jquery/dist/jquery.min.js"],
             "assets": ["src/favicon.ico", "src/assets"]
           }
         },
