--- a/app/frontend/angular.json
+++ b/app/frontend/angular.json
@@ -19,8 +19,15 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "src/tsconfig.app.json",
             "assets": ["src/favicon.ico", "src/assets"],
-            "scripts": ["./node_modules/jquery/dist/jquery.min.js"],
-            "styles": ["src/styles.css"]
+            "scripts": [
+              "./node_modules/jquery/dist/jquery.min.js",
+              "src/assets/autocomplete/jquery.easy-autocomplete.min.js"
+            ],
+            "styles": [
+              "src/styles.css",
+              "src/assets/autocomplete/easy-autocomplete.css",
+              "src/assets/autocomplete/easy-autocomplete.themes.css"
+            ]
           },
           "configurations": {
             "production": {
